Fixing overflow

--- a/src/app.css
+++ b/src/app.css
@@ -36,6 +36,7 @@ body {
 		'footer';
 
 	grid-template-rows: min-content min-content 1fr min-content;
+	grid-template-columns: 100%;
 
 	height: 100dvh;
 }
@@ -118,6 +119,7 @@ button {
 .stack {
 	display: grid;
 	grid-template-areas: 'stack';
+	grid-template-columns: 100%;
 
 	& > * {
 		grid-area: stack;
@@ -170,8 +172,8 @@ button {
 		[full-start] var(--full)
 		[feature-start] var(--feature)
 		[popout-start] var(--popout)
-		[content-start] var(--content)
-		[content-end] var(--gap)
+		[content-start] var(--content) [content-end]
+		var(--gap)
 		[sidebar-start] var(--sidebar) [sidebar-end]
 		var(--popout) [popout-end]
 		var(--feature) [feature-end]
@@ -194,7 +196,7 @@ button {
 	}
 	& .sidebar {
 		grid-column: sidebar;
-		grid-row: 1/100000000;
+		grid-row: 1/10000;
 	}
 }
 
